# enquete_tech

./: README.md  alembic.ini  backend.py  banco.sqlite  database.py  frontend.py  main.py  models.py  pyproject.toml  seed.py  teste_api.http
migrations/: env.py
migrations/versions/: 8f7df215e27b_criacao_da_tabela_tecnologia.py
