[project]
name = "enquete-tech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "flask>=3.1.3",
    "flask-sqlalchemy>=3.1.1",
    "flet[all]>=0.84.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.0",
]
